--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,12 +1,41 @@
 [defaults]
-nocows = True
-roles_path = ./roles
-inventory  = ./hosts.ini
+
+library = /etc/ansible/modules/vendor_modules:/etc/ansible/module/custom_modules
+roles_path = /etc/ansible/roles
 
 remote_tmp = $HOME/.ansible/tmp
-local_tmp  = $HOME/.ansible/tmp
-pipelining = True
-become = True
+local_tmp = $HOME/.ansible
+
 host_key_checking = False
-deprecation_warnings = False
-callback_whitelist = profile_tasks
+
+# retry files
+#retry_files_enabled = False
+#retry_files_save_path = $HOME/.ansible/retry
+
+# ansible log
+log_path = $HOME/.ansible/ansible.log
+
+callback_plugins = /etc/ansible/plugins/callback:plugins/callback
+#stdout_callback = yaml
+bin_ansible_callbacks = True
+display_failed_stderr = yes
+show_custom_stats = yes
+
+display_skipped_hosts = True
+#executable = /bin/bash
+fact_path = /etc/ansible/facts.d
+
+module_lang = en_US.UTF-8
+module_name = command
+
+deprecation_warnings=False
+command_warnings=False
+
+#transport=ssh
+#pipelining=True
+forks=5
+
+[ssh_connection]
+ssh_args=-o ControlMaster=auto -o ControlPersist=30m -F~/.ssh/ops.config
+#scp_if_ssh=True 
+#control_path=%(directory)s/%%h-%%r
