--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,6 +1,7 @@
 ---
 k3s_version: v1.17.5+k3s1
-ansible_user: debian
+ansible_user: ops_root
 systemd_dir: /etc/systemd/system
 master_ip: "{{ hostvars[groups['master'][0]]['ansible_host'] | default(groups['master'][0]) }}"
-extra_server_args: ""
+extra_server_args: --docker --disable traefik 
+extra_server_args: --docker
